--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   padding: 1rem 2rem;
   background: #f5f5f5;
+  align-items: center;
 
   a {
     margin-left: 1rem;
