--- a/src/styles/ProjectCard.module.scss
+++ b/src/styles/ProjectCard.module.scss
@@ -5,6 +5,7 @@
   width: 250px;
   background: #fff;
   transition: transform 0.2s;
+  cursor: pointer;
 
   &:hover {
     transform: translateY(-5px);
