--- a/src/styles/ProfileSection.module.scss
+++ b/src/styles/ProfileSection.module.scss
@@ -6,7 +6,7 @@
     margin: 1rem 0 0.5rem 0;
   }
   img {
-    border-radius: 50%;
+    border-radius: 60%;
   }
   p {
     font-size: 1.1rem;
@@ -15,7 +15,9 @@
 }
 
 .AboutSection {
+    margin: 5% 2% 0 0;
     display: flex;
     flex-direction: row;
     align-self:flex-start;
+    justify-content: center;
 }
