--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -1,5 +1,5 @@
 .card {
-  margin-top: 10% 0 0 0;
+  margin: 0 0 5% 0;
   max-height: 100%;
   border: 1px solid #ccc;
   padding: 1rem;
@@ -8,9 +8,10 @@
   transition: transform 0.2s;
   cursor: pointer;
 
-  //overflow-y: scroll;
   word-wrap: break-word;
-  word-break: break-all;
+  word-break: normal;
+  overflow: hidden;
+  justify-content: flex-start;
   max-height: 100% !important;
   &:hover {
     transform: translateY(-5px);
@@ -18,15 +19,24 @@
 
   h3 {
     margin-top: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   p {
     color: #555;
+    //text-overflow: ellipsis;   
+   // display: -webkit-box;      
+    //-webkit-line-clamp: 3;
+    //-webkit-box-orient: vertical;
+    //line-height: 1.4;
+    //max-height: calc(1.4em * 3);
+    overflow-y:auto;
   }
 
   a {
     display: inline-block;
-    margin-top: 0.5rem;
+    margin-top: auto;
     color: #0070f3;
 
     &:hover {
