--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -13,8 +13,11 @@
   overflow: hidden;
   justify-content: flex-start;
   max-height: 100% !important;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
   &:hover {
     transform: translateY(-5px);
+     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
   }
 
   h3 {
